# esp32s3_lcd_touch

./: .gitignore  README.md  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/LED/: led.h
components/BSP/PWM/: pwm.h
components/BSP/WIFI/: wifi_demo.c  wifi_demo.h
components/UI/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.c
